[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/texture/thumbnail.jpeg" type="Texture" id=1]
[ext_resource path="res://asset/texture/UI_play.png" type="Texture" id=2]
[ext_resource path="res://scene/UI/src/dashboard.gd" type="Script" id=3]
[ext_resource path="res://asset/texture/rotateGuide.png" type="Texture" id=4]

[node name="dashboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="play" type="TextureButton" parent="."]
anchor_left = 0.390625
anchor_top = 0.546667
anchor_right = 0.609375
anchor_bottom = 0.666667
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="r_guide" type="TextureRect" parent="."]
visible = false
anchor_top = 0.013
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -7.8
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="resized" from="." to="." method="_on_dashboard_resized"]
[connection signal="button_down" from="play" to="." method="_on_play_button_down"]
